[package]
name = "rvx"
version = "0.1.0"
authors = ["Acshi Haggenmiller <acshikh@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.13", features = ["server", "tcp", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.12.0"
